js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib1/JsModuleA.4.kt
@file:JsModule("../js-module-a-new.mjs")

external fun externalDemoFunction(): Int
